@@ -1,9 +1,11 @@
 package com.twitter.zk.coordination
 
+import com.twitter.concurrent.Permit
+import com.twitter.conversions.time._
+import com.twitter.util._
+import com.twitter.zk.{NativeConnector, RetryPolicy, ZkClient, ZNode}
 import java.util.concurrent.ConcurrentLinkedQueue
-
-import scala.collection.JavaConverters._
-
+import org.apache.zookeeper.KeeperException.NoNodeException
 import org.apache.zookeeper.ZooDefs.Ids.OPEN_ACL_UNSAFE
 import org.junit.runner.RunWith
 import org.scalatest.WordSpec
@@ -12,11 +14,7 @@ import org.scalatest.concurrent.Eventually._
 import org.scalatest.junit.JUnitRunner
 import org.scalatest.mock.MockitoSugar
 import org.scalatest.time.{Millis, Seconds, Span}
-
-import com.twitter.concurrent.Permit
-import com.twitter.conversions.time._
-import com.twitter.util._
-import com.twitter.zk.{NativeConnector, RetryPolicy, ZkClient}
+import scala.collection.JavaConverters._
 
 @RunWith(classOf[JUnitRunner])
 class ZkAsyncSemaphoreTest extends WordSpec with MockitoSugar with AsyncAssertions {
@@ -140,6 +138,27 @@ class ZkAsyncSemaphoreTest extends WordSpec with MockitoSugar with AsyncAssertio
               assert(sem2.numPermitsAvailable == 2)
               assert(sem2.numWaiters == 0)
             }
+          }
+        }
+      }
+
+      "numPermitsOf" should {
+        "get a node's value" in {
+          withClient { zk =>
+            val sem = new ZkAsyncSemaphore(zk, "/aoeu/aoeu", 2)
+            val znode = ZNode(zk, "/testing/twitter/node_with_data_7")
+            Await.result(znode.delete().rescue{ case e: NoNodeException => Future.value(0) }, 5.seconds)
+            Await.result(znode.create("7".getBytes), 5.seconds)
+            val permits: Future[Int] = sem.numPermitsOf(znode)
+            assert(Await.result(permits, 5.seconds) == 7)
+          }
+        }
+
+        "not error on NoNode" in {
+          withClient { zk =>
+            val sem = new ZkAsyncSemaphore(zk, "/aoeu/aoeu", 2)
+            val permits: Future[Int] = sem.numPermitsOf(ZNode(zk, "/aoeu/aoeu/node_that_does_not_exist"))
+            Await.result(permits, 5.seconds)
           }
         }
       }
